# xcc

./: .cvsignore  .gitignore  AUTHORS  Make.conf  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  bxcc.c  c2cstr.sh  configure.ac  configure.in  libexe.c  libxcc.c  version.mak  xcc.1  xcc.h  xcc.xcc  xccP.h  xfile.c  xfile.h
examples/: .cvsignore  Makefile  Makefile.am  books-sample.xml  books.h  books.xcc  libbooks.c
packaging/debian/: .cvsignore  control  copyright  make-debs.sh  rules  xcc.docs  xcc.files  xcc.manpages
packaging/fedora/: .cvsignore  make-rpm.sh  xcc.spec.in
packaging/freebsd/: Makefile.ports  make-freebsd-pkg.sh  pkg-descr  pkg-plist
packaging/openbsd/: Makefile.ports  make-openbsd-pkg.sh
packaging/openbsd/pkg/: PLIST
packaging/solaris/: make-solaris-pkg.sh  pkginfo  prototype
